feat: Remplacement favicon et icônes par logo KT OPTIMA
- Création favicon.svg avec KT dans cercle bleu (#2563eb) et texte blanc
- Création icon.svg (192x192) pour Apple Touch Icon et Open Graph
- Mise à jour index.html avec nouveau favicon et métadonnées
- Remplacement références Lovable par KT OPTIMA
- Titre changé en 'KT OPTIMA'
- Ajout script generate-favicon.js pour documentation

--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BilvoxaERP</title>
-    <meta name="description" content="BilvoxaERP - Suite ERP complète pour la gestion d'entreprise" />
-    <meta name="author" content="Bilvoxa" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/icon.svg" />
+    <title>KT OPTIMA</title>
+    <meta name="description" content="KT OPTIMA - Suite ERP complète pour la gestion d'entreprise" />
+    <meta name="author" content="KT OPTIMA" />
 
-    <meta property="og:title" content="BilvoxaERP" />
-    <meta property="og:description" content="BilvoxaERP - Suite ERP complète pour la gestion d'entreprise" />
+    <meta property="og:title" content="KT OPTIMA" />
+    <meta property="og:description" content="KT OPTIMA - Suite ERP complète pour la gestion d'entreprise" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/icon.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Bilvoxa" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@KTOptima" />
+    <meta name="twitter:image" content="/icon.svg" />
   </head>
 
   <body>
